IRL model.ipynb

--- a/IRL model.ipynb
+++ b/IRL model.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_df = pd.read_excel('/home/wang_xi_2/IRL/ECR/sample data.xlsx')"
+    "result_df = pd.read_excel('./sample data.xlsx')"
    ]
   },
   {
@@ -317,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_results.to_excel('/home/wang_xi_2/IRL/ECR/reward.xlsx')"
+    "all_results.to_excel('./reward.xlsx')"
    ]
   }
  ],
